# interview-copilot-desktop

./: .gitignore  README.md  field-company.json  field-create.json  index.html  package-lock.json  package.json  record-batch-create.json  vite.config.ts
.github/workflows/: build-windows-client.yml
JD/: .tmp_ai_search.json  .tmp_pm_search.json  JD抓取_匹配_飞书同步流程.md  feishu_sync_summary.json  score_jobs_with_doubao.py  sync_top_jobs_to_feishu.ps1
JD/京东/: feishu_sync_summary_jd.json  feishu_sync_summary_jd_dryrun.json  fetch_jd_jobs_csv.mjs  jd_jobs_产品经理.csv  jd_jobs_产品经理.raw.json  jd_jobs_产品经理_top36_模型初筛.csv  jd_jobs_产品经理_top45_模型初筛.csv  jd_jobs_产品经理_top7_人工筛选.csv  jd_jobs_产品经理_筛选后.csv  jd_jobs_产品经理_筛选审计.csv  jd_jobs_产品经理_评分摘要.json  京东.txt
JD/字节/: bytedance_jobs_AI产品经理.csv  bytedance_jobs_AI产品经理.raw.json  内推岗位.txt  (+10 more)
docs/: DEVELOPMENT_LOG.md  LOCAL_CODEX_HANDOFF.md
electron/: main.cjs  preload.cjs
resources/: jianli.md  question_bank_embedded.md
scripts/: build-windows.ps1  check-client-env.mjs  electron-dev.cjs  export-manual-tencent-top10.ps1  match-tencent-jobs-by-resume.ps1  replay-audio-session.mjs  replay-interview-session.mjs  replay-interview-utils.mjs  test-ark-speed.cjs  test-asr-config.mjs  test-question-matcher.mjs
src/: App.tsx  desktopClient.ts  styles.css  tauriClient.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  doubao.rs  lib.rs  main.rs  matcher.rs  question_bank.rs  session.rs
待整理知识库/: agent-architecture-comparison.html
面试整理/: 8-西安思倍-一面.txt  9-青岛蒙豆-二面.txt  老师评价.txt
(+236 files in other folders)
