[package]
name = "interview-copilot-desktop"
version = "0.1.0"
description = "Windows desktop interview answer matcher"
authors = ["Codex"]
edition = "2021"

[lib]
name = "interview_copilot_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1"
futures-util = "0.3"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0", features = [] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "fs"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(windows)'.dependencies]
wasapi = "0.23"

